KE-45061 add java module options